--- a/test-n8n.html
+++ b/test-n8n.html
@@ -4,31 +4,7 @@
 <head>
     <title>Test N8n Webhook</title>
     <style>
-        body {
-            font-family: Arial;
-            padding: 20px;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        button {
-            padding: 10px 20px;
-            background: #4d84f6;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-
-        pre {
-            background: #f5f5f5;
-            padding: 15px;
-            border-radius: 5px;
-            overflow-x: auto;
-        }
-
-        .loading {
-            color: #666;
-        }
+        body {}
 
         .success {
             color: green;
@@ -42,53 +18,112 @@
 
 <body>
     <h1>N8n Webhook Test</h1>
-    <button onclick="testWebhook()">Test Webhook</button>
-    <div id="status"></div>
-    <pre id="result"></pre>
+    <!DOCTYPE html>
+    <html>
 
-    <script>
-        async function testWebhook() {
-            const statusEl = document.getElementById('status');
-            const resultEl = document.getElementById('result');
+    <head>
+        <title>Test N8n Webhook</title>
+        <style>
+            body {}
 
-            statusEl.innerHTML = '<p class="loading">Sending request to N8n...</p>';
-            resultEl.textContent = '';
-
-            const testData = {
-                goal: "Launch a SaaS product in 6 months",
-                constraints: ["Limited budget", "Solo founder"],
-                preferences: {
-                    experienceLevel: "beginner",
-                    budget: "low"
-                }
-            };
-
-            try {
-                const response = await fetch('https://n8n-63lu.onrender.com/webhook/6017428e-785b-4e59-ac62-8fe0a5a2c8f6', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(testData)
-                });
-
-                statusEl.innerHTML = `<p class="loading">Response Status: ${response.status}</p>`;
-
-                if (!response.ok) {
-                    const errorText = await response.text();
-                    throw new Error(`HTTP ${response.status}: ${errorText}`);
-                }
-
-                const data = await response.json();
-                statusEl.innerHTML = '<p class="success">✓ Success! N8n workflow completed.</p>';
-                resultEl.textContent = JSON.stringify(data, null, 2);
-
-            } catch (error) {
-                statusEl.innerHTML = `<p class="error">✗ Error: ${error.message}</p>`;
-                resultEl.textContent = error.stack || error.toString();
+            .success {
+                color: green;
             }
-        }
-    </script>
-</body>
 
-</html>
+            .error {
+                color: red;
+            }
+        </style>
+    </head>
+
+    <body>
+        <h1>N8n Webhook Test</h1>
+        <button onclick="testWebhook()">Test Webhook</button>
+        <!DOCTYPE html>
+        <html>
+
+        <head>
+            <title>Test N8n Webhook</title>
+            <style>
+                body {}
+
+                .success {
+                    color: green;
+                }
+
+                .error {
+                    color: red;
+                }
+            </style>
+        </head>
+
+        <body>
+            <h1>N8n Webhook Test</h1>
+            <!DOCTYPE html>
+            <html>
+
+            <head>
+                <title>Test N8n Webhook</title>
+                <style>
+                    body {}
+
+                    .success {
+                        color: green;
+                    }
+
+                    .error {
+                        color: red;
+                    }
+                </style>
+            </head>
+
+            <body>
+                <h1>N8n Webhook Test</h1>
+                <button onclick="testWebhook()">Test Webhook</button>
+                <div id="status"></div>
+                <pre id="result"></pre>
+
+                <script>
+                    async function testWebhook() {
+                        try {
+                            const testData = {
+                                goal: "Score 330+ on GRE",
+                                constraints: ["No paid courses", "Self-study only"],
+                                preferences: ["Video learning", "Practice tests"],
+                                experienceLevel: "Intermediate",
+                                budget: "0",
+                                timeline: "3 months",
+                                userTier: "Free"
+                            };
+                            const response = await fetch('https://n8n-63lu.onrender.com/webhook-test/b7f2b640-9a16-4fca-9c73-74ee427f4606', {
+                                method: 'POST',
+                                headers: {
+                                    'Content-Type': 'application/json',
+                                },
+                                body: JSON.stringify(testData)
+                            });
+                            // Assuming statusEl and resultEl are defined elsewhere or will be defined.
+                            // For now, let's add a basic success message.
+                            const statusEl = document.getElementById('status');
+                            const resultEl = document.getElementById('result');
+
+                            if (response.ok) {
+                                const data = await response.json();
+                                statusEl.innerHTML = '<p class="success">✓ Webhook call successful!</p>';
+                                resultEl.textContent = JSON.stringify(data, null, 2);
+                            } else {
+                                const errorText = await response.text();
+                                statusEl.innerHTML = `<p class="error">✗ Webhook call failed: ${response.status} ${response.statusText}</p>`;
+                                resultEl.textContent = errorText;
+                            }
+                        } catch (error) {
+                            const statusEl = document.getElementById('status');
+                            const resultEl = document.getElementById('result');
+                            statusEl.innerHTML = `<p class="error">✗ Error: ${error.message}</p>`;
+                            resultEl.textContent = error.stack || error.toString();
+                        }
+                    }
+                </script>
+            </body>
+
+            </html>
